--- a/type-level-typescript/tsconfig.json
+++ b/type-level-typescript/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "lib": ["ESNext"],
+    "target": "ESNext",
+    "module": "ESNext",
     "typeRoots": ["./types"]
   }
 }
