type-level-typescript: Template Literal Types | bonus challenge 2

--- a/type-level-typescript/tsconfig.json
+++ b/type-level-typescript/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "ESNext",
     "typeRoots": ["./types"]
