type-hero: The `Pick` builtin

--- a/type-hero/challenges/package.json
+++ b/type-hero/challenges/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "@type-challenges/utils": "^0.1.1",
+    "@types/node": "^20.10.5",
     "type-testing": "^0.2.0"
   }
 }
